# Multi-Source-Candidate-Data-Transformer

./: .gitignore  README.md  pyproject.toml  test_resolve.py
candidate_data_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
configs/: custom_example.json  default.json
samples/: ats_export.json  github_usernames.txt  recruiters.csv
samples/notes/: note_alice.txt  note_bob.txt  note_carlos.txt  note_empty.txt  note_linus.txt
tests/: test_adapters.py  test_e2e.py  test_edge_cases.py  test_identity.py  test_merge.py  test_normalize.py
transformer/: __main__.py  assemble.py  cli.py  dashboard.py  explain.py  identity.py  ingest.py  merge.py  models.py  normalize.py  project.py  report.py  schema.py  validate.py
transformer/adapters/: __init__.py  ats_adapter.py  base.py  csv_adapter.py  github_adapter.py  notes_adapter.py
